# claudesynth

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: changelog.rs  commands.rs  formatter.rs  history.rs  main.rs  publisher.rs  summarizer.rs  version.rs
src/changelog/: domain.rs  http.rs  parser.rs
src/commands/: edit.rs  editor.rs  run.rs  show.rs
src/formatter/: domain.rs  markdown.rs
src/history/: domain.rs  json_file.rs
src/publisher/: domain.rs  stdout.rs
src/summarizer/: claude.rs  domain.rs
