[package]
name = "claudesynth"
version = "1.0.0"
edition = "2024"
description = "CLI that summarizes Claude Code changelog updates into Slack-ready digests"
license = "MPL-2.0"
repository = "https://github.com/giorgiovilardo/claudesynth"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
jiff = { version = "0.2.23", features = ["serde"] }
pulldown-cmark = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ureq = "3.2.0"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
